# internal/models/dto/chat.go
@@ -3,6 +3,7 @@ package dto
 import "github.com/google/uuid"
 
 type Chat struct {
-	Id   uuid.UUID `json:"id" binding:"required"`
-	Name string    `json:"name"`
+	Id        uuid.UUID  `json:"id" binding:"required"`
+	Name      string     `json:"name"`
+	Employees []Employee `json:"employees"`
 }
