# internal/models/dto/chat_detail.go
@@ -3,8 +3,8 @@ package dto
 import "github.com/google/uuid"
 
 type ChatDetail struct {
-	Id          uuid.UUID   `json:"id" binding:"required"`
-	Name        string      `json:"name"`
-	IsGroup     bool        `json:"is_group"`
-	EmployeeIds []uuid.UUID `json:"employee_ids"`
+	Id        uuid.UUID  `json:"id" binding:"required"`
+	Name      string     `json:"name"`
+	IsGroup   bool       `json:"is_group"`
+	Employees []Employee `json:"employees"`
 }
